--- a/server/.env.dev
+++ b/server/.env.dev
@@ -4,7 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-
+## Project name is : Bhuwan Darai's Project
 # Connect to Supabase via connection pooling with Supavisor.
 DATABASE_URL="postgresql://postgres.lgkxrmycxbtjnguroqgh:Bhuwan15@@@aws-0-ap-south-1.pooler.supabase.com:6543/postgres?pgbouncer=true"
 
@@ -13,3 +13,7 @@ DIRECT_URL="postgresql://postgres.lgkxrmycxbtjnguroqgh:Bhuwan15@@@aws-0-ap-south
         
 PORT=3000
 NODE_ENV=development
+
+user = bhuwandarai39@gmail.com
+pass = Bhuwan15
+
